# openapi/swagger.yaml
@@ -1091,6 +1091,15 @@ definitions:
       quantity_sum:
         type: number
     type: object
+  internal_metering_adapters_http_system.IngestionSafetyResponse:
+    properties:
+      accepted_events:
+        type: integer
+      rejected_events:
+        type: integer
+      throttled_events:
+        type: integer
+    type: object
   internal_metering_adapters_http_system.LastDecisionPruneRunResponse:
     properties:
       before:
@@ -1266,6 +1275,42 @@ definitions:
       truncated:
         type: boolean
     type: object
+  internal_metering_adapters_http_system.RollupHealthResponse:
+    properties:
+      finalized_through:
+        type: string
+      healthy_meters:
+        type: integer
+      issues:
+        type: integer
+      items:
+        items:
+          $ref: '#/definitions/internal_metering_adapters_http_system.RollupMeterHealthResponse'
+        type: array
+      meters:
+        type: integer
+      status:
+        type: string
+    type: object
+  internal_metering_adapters_http_system.RollupMeterHealthResponse:
+    properties:
+      expected_through:
+        type: string
+      finalized_through:
+        type: string
+      issue:
+        type: string
+      last_run_at:
+        type: string
+      meter:
+        type: string
+      rollup_rows:
+        type: integer
+      source_events:
+        type: integer
+      status:
+        type: string
+    type: object
   internal_metering_adapters_http_system.StatsResponse:
     properties:
       consumption_decisions:
@@ -1274,6 +1319,8 @@ definitions:
         type: integer
       export_cleanup_runs:
         type: integer
+      ingestion_safety:
+        $ref: '#/definitions/internal_metering_adapters_http_system.IngestionSafetyResponse'
       last_decision_prune_run:
         $ref: '#/definitions/internal_metering_adapters_http_system.LastDecisionPruneRunResponse'
       last_export_cleanup_run:
@@ -1288,6 +1335,8 @@ definitions:
         type: integer
       reconciliation_health:
         $ref: '#/definitions/internal_metering_adapters_http_system.ReconciliationHealthResponse'
+      rollup_health:
+        $ref: '#/definitions/internal_metering_adapters_http_system.RollupHealthResponse'
       usage_events:
         type: integer
       worker_health:
@@ -4170,6 +4219,18 @@ paths:
           description: Conflict
           schema:
             $ref: '#/definitions/github_com_ssubedir_open-spanner_internal_metering_adapters_http_internal_respond.ErrorResponse'
+        "413":
+          description: Request Entity Too Large
+          schema:
+            $ref: '#/definitions/github_com_ssubedir_open-spanner_internal_metering_adapters_http_internal_respond.ErrorResponse'
+        "429":
+          description: Too Many Requests
+          headers:
+            Retry-After:
+              description: Seconds until ingestion capacity is available
+              type: string
+          schema:
+            $ref: '#/definitions/github_com_ssubedir_open-spanner_internal_metering_adapters_http_internal_respond.ErrorResponse'
         "500":
           description: Internal Server Error
           schema:
@@ -4249,6 +4310,18 @@ paths:
             $ref: '#/definitions/github_com_ssubedir_open-spanner_internal_metering_adapters_http_internal_respond.ErrorResponse'
         "409":
           description: Conflict
+          schema:
+            $ref: '#/definitions/github_com_ssubedir_open-spanner_internal_metering_adapters_http_internal_respond.ErrorResponse'
+        "413":
+          description: Request Entity Too Large
+          schema:
+            $ref: '#/definitions/github_com_ssubedir_open-spanner_internal_metering_adapters_http_internal_respond.ErrorResponse'
+        "429":
+          description: Too Many Requests
+          headers:
+            Retry-After:
+              description: Seconds until ingestion capacity is available
+              type: string
           schema:
             $ref: '#/definitions/github_com_ssubedir_open-spanner_internal_metering_adapters_http_internal_respond.ErrorResponse'
         "500":
